--- a/src/Navigation/Navigation.css
+++ b/src/Navigation/Navigation.css
@@ -3,6 +3,7 @@
 }
 .Header2 {
   color: #e81038;
+  text-shadow: 1px 1px black;
   font-style: italic;
   font-weight: bold;
   font-size: 43px;
@@ -12,12 +13,12 @@
 }
 
 .Inputsearch {
-  border-style: hidden;
+  border: none;
   /* border-color: #e81038; */
   margin-top: -170px;
   float: right;
-  margin-right: -270px;
-  width: 40%;
+  margin-left: -270ex;
+  width: 30%;
   height: 43px;
 }
 
@@ -72,6 +73,7 @@ body {
 
 .Cart {
   margin: auto;
+  float: center;
   background-color: #e81038;
   border-style: hidden;
   font-size: 23px;
@@ -81,8 +83,8 @@ body {
   transition: 1s;
 }
 .Login {
-  float: right;
-  margin: auto;
+  float: center;
+  margin-left: 20px;
   background-color: white;
   border-style: outset;
   font-size: 23px;
@@ -94,10 +96,12 @@ body {
 .Input {
   background-color: black;
   color: white;
+
   margin-top: 20px;
   width: 100%;
   height: 43px;
   font-size: 12px;
+  border: none;
   border-radius: 30px;
 }
 .Searchicon {
@@ -109,15 +113,24 @@ body {
   border-style: hidden;
 }
 .Cart:hover {
-  background-color: blue;
+  background-color: darkblue;
   color: white;
 }
 
 .Input:hover {
   background-color: pink;
-  color: lightblue;
+  color: black;
+  border: none;
+}
+.Input:active {
+  color: black;
+  border: none;
 }
 
+.Input:focus {
+  border: none;
+  color: black;
+}
 .Imgandlink {
   margin-top: 70px;
 }
