--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
-.App {
+.Mainapp {
+  /* position: relative; */
+  /* margin-left: -10ex; */
+  position: absolute;
+  margin: 0px;
+  width: 100%;
+  justify-items: center;
+  /* background-color: red; */
+  display: grid;
   align-content: center;
+  grid-template-rows: repeat(3, max-content);
+  grid-template-columns: 1fr;
+  grid-auto-rows: max-content;
+}
+.Header {
+  /* background-color: sandybrown; */
+  grid-column: 1/-1;
+}
+.Footer {
+  justify-items: center;
+  /* background-color: chocolate; */
+  width: 100%;
+  grid-column: 1/-1;
+  grid-row: 3/4;
 }
