--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -2,61 +2,79 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Open+Sans&family=Raleway&family=Roboto&display=swap");
 
 .Maindiv {
+  justify-content: center;
+
   border-style: hidden;
   border-color: red;
   align-items: center;
   align-self: center;
   margin-top: 30px;
+  /* background-color: yellow; */
+  /* margin-left: 40px; */
   height: 100%;
-  margin-left: -180px;
-  width: 154ex;
+  /* margin-left: -200px; */
+  width: fit-content;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: max-content;
+  grid-row-gap: 2ex;
 }
 .Onecard {
-  width: 1230px;
+  /* background-color: red; */
+  grid-row: 1/2;
+
+  width: fit-content;
+}
+.Image1stcard {
+  width: 1130px;
   height: 520px;
 }
-
 .Image1 {
   /* border-style: solid; */
-  margin-top: 4ex;
-
+  /* margin-top: 4ex; */
+  padding-bottom: 4ex;
   width: 100%;
-  height: 50ex;
+  /* height: 50ex; */
+  display: grid;
+  grid-template-rows: 50px, 1fr;
+  grid-template-columns: 1fr, 1fr;
+  grid-column-gap: 30px;
   background-color: rgb(255 64 64);
 }
 
 .Texth1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  /* background-color: blue; */
+}
+.H1text {
   text-align: center;
   font-family: "Questrial", sans-serif;
   font-size: 24px;
-  padding-top: 30px;
+  padding-top: 2px;
 }
 .Learnmore {
-  float: left;
-  text-align: center;
-  margin-left: 200px;
-  width: fit-content;
-  font-size: 42px;
-  font-family: "Questrial", sans-serif;
-  letter-spacing: 0.05em;
-  font-weight: bold;
-  text-shadow: 1px 1px white;
+  grid-row: 2/3;
+  grid-column: 1/2;
+  display: grid;
+  grid-template-rows: max-content, 0.1fr;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  width: 100%;
+  /* background-color: tomato; */
 }
-
-.Imageabout {
-  width: 441px;
-  height: 296px;
-  border-radius: 10px;
-  border-style: solid;
-  border-color: black;
-  float: right;
-  margin-top: 20px;
-  margin-right: 140px;
-  object-fit: cover;
-  object-position: 50% 50%;
+.Gridlearnset {
+  grid-row: 1/2;
+  /* background-color: yellow; */
+  text-align: center;
+  /* width: 100%; */
+  padding: 50px;
+}
+.Gridlearnbutton {
+  grid-row: 2/3;
 }
 .Learnbutton {
-  margin-left: 350px;
+  /* margin-left: 350px; */
   white-space: nowrap;
   /* font: normal normal 700 20px/1.4em questrial/sans-serif; */
   font-style: normal;
@@ -75,6 +93,35 @@
   transition: 0.5s;
   box-shadow: 0px 4px 40px 0px black;
 }
+.Learnmoretext {
+  float: left;
+  text-align: center;
+  /* margin-left: 200px; */
+  width: fit-content;
+  font-size: 42px;
+  font-family: "Questrial", sans-serif;
+  letter-spacing: 0.05em;
+  font-weight: bold;
+  text-shadow: 1px 1px white;
+}
+.AboutImage {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.Imageabout {
+  width: 441px;
+  height: 296px;
+  border-radius: 10px;
+  border-style: solid;
+  border-color: black;
+  float: right;
+  margin-top: 20px;
+  margin-right: 140px;
+  margin-bottom: 30px;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
 
 .Learnbutton:hover {
   background-color: black;
@@ -85,11 +132,9 @@
 .Nextbigcard {
   border-style: hidden;
 
-  margin-top: 4ex;
-
+  justify-content: center;
   background-image: url("./walking.jpg");
   background-size: cover;
-  margin-bottom: 4ex;
 }
 .Welcome {
   text-align: center;
@@ -112,7 +157,7 @@
 }
 .Join {
   border-style: hidden;
-  margin-left: 530px;
+  margin-left: 460px;
 
   height: 50px;
   font-size: 14px;
