--- a/src/Hiring/Hiring.css
+++ b/src/Hiring/Hiring.css
@@ -1,7 +1,7 @@
 .HMain {
   margin: 9%;
   margin-top: 20px !important;
-  background-color: khaki;
+  /* background-color: khaki; */
   display: grid;
   grid-template-columns: 100%;
 
@@ -11,6 +11,7 @@
 }
 .Hiringmain {
   /* background-color: chartreuse; */
+
   grid-column: 1/-1;
   grid-row: 1/2;
   display: grid;
@@ -44,11 +45,12 @@
 
   /* text-align: center; */
 }
-p,
+
 .H4,
 .H5 {
   width: 70%;
   padding-left: 120px;
+  margin: 10px;
 }
 .H5 {
   font-size: 16px;
@@ -73,6 +75,8 @@ p,
 .Application {
   background-color: red;
   background-image: url("/src/Hiring/Application.jpg");
+  width: 85%;
+  margin-left: 8%;
 
   filter: grayscale(100%);
   filter: saturate(20%);
@@ -99,6 +103,8 @@ p,
 .Ptag1 {
   /* text-align: center; */
   margin-top: -20px;
+  padding-left: 120px;
+  margin: 5px;
 }
 .Inputbars {
   /* background-color: hotpink; */
