--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,7 +1,18 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext");
 @import url("https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Open+Sans&family=Raleway&family=Roboto&display=swap");
 
+.Parentdiv {
+  /* background-color: lawngreen; */
+  display: grid;
+  grid-template-columns: fit-content;
+  grid-template-rows: fit-content fit-content fit-content fit-content;
+  justify-items: center;
+  grid-row-gap: 20px;
+}
+
 .Maindiv {
+  grid-column: 1/1;
+  grid-row: 1/2;
   justify-content: center;
 
   border-style: hidden;
@@ -361,27 +372,134 @@
   background-repeat: no-repeat;
 }
 .Benefits {
-  background-color: lightgrey;
+  margin-top: 10px;
+  margin-left: 60px;
+  margin-right: 60px;
+  grid-column: 1/-1;
+  grid-row: 2/3;
+  background-color: white;
+  background: transparent;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 0px;
   justify-items: center;
 }
 .Teachers {
   grid-column: 1/2;
-
+  border-style: hidden;
   justify-items: center;
   text-align: center;
-  width: min-content;
+  width: min-content + fit-content;
+  height: min-content;
+  font-size: 13px;
 }
 .Community {
   grid-column: 2/3;
+  border-style: hidden;
+  width: min-content;
+  height: min-content;
+  font-size: 13px;
+  text-align: center;
 }
 .Curriculum {
   grid-column: 3/4;
+  border-style: hidden;
+  text-align: center;
+  width: min-content + fit-content;
+  height: min-content;
+  font-size: 13px;
 }
 .Iconscourse {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   font-weight: lighter;
+}
+.H2courses {
+  text-decoration: underline;
+  font-weight: 500;
+  font-size: 20px;
+  font-family: "Questrial", sans-serif;
+}
+.Utrap {
+  margin-top: -2ex;
+  border-top: 50px solid;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 50px solid #000;
+  height: fit-content;
+}
+/* .Dtrap { */
+/* margin-top: -12ex; */
+/* justify-items: center;
+  border-bottom: 50px solid #000;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent; */
+/* } */
+/* position: absolute; */
+.H3text {
+  margin-top: -24px;
+  color: white;
+  text-align: center;
+  margin-bottom: -45px;
+  font-size: 33px;
+  font-family: "Questrial", sans-serif;
+  font-weight: 500;
+  /* font-size: 23px; */
+}
+.testimonials {
+  width: 100%;
+  height: 100%;
+  grid-row: 3/4;
+  grid-column: 1/-1;
+  /* background-color: blueviolet; */
+}
+.testimonials h1 {
+  text-align: center;
+  font-size: 43px;
+  font-weight: 500;
+  color: rgb(255, 64, 64);
+  text-shadow: 1px 1px black;
+  text-decoration: underline black;
+  margin-bottom: -80px;
+  margin-top: -10px;
+}
+.Gifholder {
+  grid-column: 1/-1;
+  grid-row: 4/5;
+  display: grid;
+  background-color: violet;
+  width: 90% !important;
+  height: 526px !important;
+  background-image: url("/src/Home/giphy.gif");
+  text-align: center;
+  align-items: center;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.Gifholder > h1 {
+  color: yellow;
+  text-shadow: 1px 1px 20px 20px grey;
+  margin-top: 250px;
+  font-size: 43px;
+  text-shadow: 3px 3px black;
+}
+.Gifholder > Button {
+  height: 50px;
+  width: 120px;
+  align-self: center;
+  margin-left: 460px;
+  margin-top: -150px;
+  color: white;
+  background-color: rgb(255, 64, 64);
+  border-style: hidden;
+  transition: 1s;
+}
+.Gifholder > Button:hover {
+  background-color: white;
+  color: #000;
+  border-style: outset;
+  border-color: #000;
+  font-size: 18px;
 }
