--- a/src/Courses/Courses.css
+++ b/src/Courses/Courses.css
@@ -2,14 +2,72 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: max-content 1fr;
+  grid-template-rows: fit-content 1fr;
   /* background-color: brown; */
 }
-.Sliderdiv {
-  width: 50%;
-  height: 50%;
-  background-color: blue;
-  grid-column: 1/-1;
+.Slidbutton {
+  background-color: grey;
+  grid-column: 1/2;
   grid-row: 1/-1;
+  padding-left: 15%;
+
+  padding-right: 25%;
+}
+.Slidbutton h2 {
+  width: max-content;
+  font-weight: 400;
+  color: white;
+}
+.Sortbutton {
+  margin: 1%;
+  grid-row: 1/2;
+  grid-column: 2/3;
+  /* background-color: blueviolet; */
+
+  justify-content: end;
+}
+
+.Selectbutton {
+  float: right;
+  font-size: 18px;
+  height: 33px;
+  font-family: "Questrial", sans-serif;
+  background-color: grey;
+  color: white;
+}
+
+.CourseList {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  /* background-color: burlywood; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-auto-rows: 1fr;
+}
+.Coursedivs {
+  border-style: solid;
+  border-width: thin;
+  border-color: black;
+  display: grid;
+  grid-template-rows: 60% 20% 20%;
+  margin: 2%;
+}
+
+.Imagediv {
+  grid-row: 1/2;
+  border-style: groove;
+}
+.Imagecourse {
+  width: 100%;
+  height: 100%;
+}
+.textdiv {
+  padding: 1%;
+  grid-row: 2/3;
+}
+.pricediv {
+  padding: 1%;
+  grid-row: 3/4;
 }
